kube/rekoni/rekoni-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: rekoni
  name: rekoni
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rekoni
  template:
    metadata:
      labels:
        app: rekoni
    spec:
      containers:
        - image: getyoutrack/rekoni-service:latest
          name: rekoni
          ports:
            - containerPort: 4004
              hostPort: 4004
              protocol: TCP
          resources:
            limits:
              memory: "500M"
      restartPolicy: Always
